--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu]
-platform = espressif8266
-board = nodemcu
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
+monitor_speed = 115200
+monitor_echo = yes
+monitor_filters = colorize, send_on_enter
+build_flags =
+    -D PIO_FRAMEWORK_MBED_RTOS_PRESENT,
+    -D AVR8_BREAKPOINT_MODE=1
+
+;debug_tool = avr-stub
+debug_port = /dev/ttyACM0
+;lib_deps =
+;    feilipu/FreeRTOS@^10.5.0-0
+;    jdolinay/avr-debugger @ ~1.1
