comandos iniciales inicializados

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,8 @@ framework = arduino
 monitor_speed = 115200
 monitor_echo = yes
 monitor_filters = colorize, send_on_enter
-build_flags = 
-	-D PIO_FRAMEWORK_MBED_RTOS_PRESENT,
-	-D AVR8_BREAKPOINT_MODE=1
 debug_port = /dev/ttyACM0
+debug_tool = olimex-arm-usb-ocd-h
+
 lib_deps = 
 	https://github.com/tzapu/WiFiManager.git
