--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ monitor_echo = yes
 monitor_filters = colorize, send_on_enter
 debug_port = /dev/ttyACM0
 debug_tool = olimex-arm-usb-ocd-h
-
 lib_deps = 
 	https://github.com/tzapu/WiFiManager.git
-    julian87nicolas/Utils@^1.5.1
+	julian87nicolas/Utils@^1.5.1
+	arduino-libraries/NTPClient@^3.2.1
