chore: added use of basic authorization

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,8 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	HTTPClient
 	ArduinoJson
+authorization_basic = '"Basic c2VydmljZWVzcDpTcGF1dG4yMDIzcGY="'
+build_flags = 
+	-L".pio/libdeps/wiscore_rak4631/BSEC Software Library/src/cortex-m4/fpv4-sp-d16-hard"
+	
+	-D API_BASIC_AUTH=${env:esp32dev.authorization_basic}
