chore: cron tasks added

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,5 +23,6 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	HTTPClient
 	ArduinoJson
+	CronAlarms
 build_flags = 
 	-L".pio/libdeps/wiscore_rak4631/BSEC Software Library/src/cortex-m4/fpv4-sp-d16-hard"
